Added some HTML to test my deployment

--- a/web-api/public/index.html
+++ b/web-api/public/index.html
@@ -23,6 +23,7 @@
 
 <body>
     <h1>NOAN mockup</h1>
+    <h3>Azurdev</h3>
     <div class='container'>
         <a href="/request.html" class="btn btn-secondary btn-lg btn-block">Request</a>
         <a href="/information.html" class="btn btn-secondary btn-lg btn-block">Information</a>
