Add analog TV input

--- a/web-api/public/index.html
+++ b/web-api/public/index.html
@@ -33,16 +33,24 @@
   </head>
 
   <body>
-    <h1>NOAN mockup</h1>
-    <h3>Azurdev</h3>
-    <h3>UID : <span id="uid"></span></h3>
-    <div class="container">
-      <a href="/request.html" class="btn btn-secondary btn-lg btn-block"
-        >Request</a
-      >
-      <a href="/information.html" class="btn btn-secondary btn-lg btn-block"
-        >Information</a
-      >
+    <div id="header">
+      <h1>NOAN mockup</h1>
+      <h3>Azurdev</h3>
+      <h3>UID : <span id="uid"></span></h3>
+      <div class="container">
+        <a href="/request.html" class="btn btn-secondary btn-lg btn-block"
+          >Request</a
+        >
+        <a href="/information.html" class="btn btn-secondary btn-lg btn-block"
+          >Information</a
+        >
+      </div>
     </div>
   </body>
+
+  <div id="channel">
+    <h2>Channel 4</h2>
+    <h2>CBC-TV</h2>
+  </div>
+</body>
 </html>
