--- a/web-api/public/index.html
+++ b/web-api/public/index.html
@@ -1,56 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>NOAN mockup</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="css/index.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/index.js"></script>
-    <script src="js/android.js"></script>
-  </head>
 
-  <body>
-    <div id="header">
-      <h1>NOAN mockup</h1>
-      <h3>Azurdev</h3>
-      <h3>UID : <span id="uid"></span></h3>
-      <div class="container">
-        <a href="/request.html" class="btn btn-secondary btn-lg btn-block"
-          >Request</a
-        >
-        <a href="/information.html" class="btn btn-secondary btn-lg btn-block"
-          >Information</a
-        >
-      </div>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>NOAN mockup</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="js/dpad.js" async defer></script>
+  <script src="js/dpad.debug.js" async defer></script>
+  <script src="js/index.js"></script>
+  <script src="js/android.js"></script>
+</head>
+
+<body>
+  <div id="header">
+    <h1>NOAN mockup</h1>
+    <h3>Azurdev</h3>
+    <h3>UID : <span id="uid"></span></h3>
+    <div class="container">
+      <div class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0"
+        onclick="location.href='/request.html';">Request</div>
+      <div class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="1"
+        onclick="location.href='/information.html';">Information</div>
     </div>
-  </body>
-
-  <div id="channel">
-    <h2>Channel 4</h2>
-    <h2>CBC-TV</h2>
   </div>
 </body>
+
+<div id="channel">
+  <h2>Channel 4</h2>
+  <h2>CBC-TV</h2>
+</div>
+</body>
+
 </html>
