--- a/web-api/public/noan.html
+++ b/web-api/public/noan.html
@@ -21,30 +21,14 @@
 </head>
 
 <body>
-  <div class="background">
-    <div id="header">
-      <h1>Input choice</h1>
-      <div class="container">
-        <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0" id="analogButton" onclick="toggleVisibility()">Analog Television</a>
-      </div>
-      <div class="container">
-        <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0" href='/noan.html'>NOAN</a>
-      </div>
-      <div class="container">
-        <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0" href='/iptv.html'>IPTV</a>
-      </div>
-      <div class="container">
-        <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0">HDMI source</a>
-      </div>
-    </div>
-  </div> 
-  <div id="channel">
-    <h2>Channel 4</h2>
-    <h2>CBC-TV</h2>
+    <h1>NOAN mockup</h1>
+    <h3>Azurdev</h3>
+    <h3>UID : <span id="uid"></span></h3>
     <div class="container">
-      <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0" id="back">Back</a>
+      <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="0" href='/request.html'>Request</a>
+      <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="1" href='/information.html'>Information</a>
+      <a class="btn btn-secondary btn-lg btn-block dpad-focusable" tabindex="1" href='/index.html'>Input Choice</a>
     </div>
-  </div>
 </body>
 
 </html>
